# python_project_setup

./: LICENSE  README.md  create-project.sh
project/: .pre-commit-config.yaml  LICENSE  pyproject.toml  setup.cfg
project/tests/: test_factorial.py
